--- a/inst/doc/neldermead-package.tex
+++ b/inst/doc/neldermead-package.tex
@@ -58,7 +58,7 @@ currently provides:\begin{itemize}
 
 \item Provides 3 algorithms, including \begin{itemize}
 
-\item the fixed shaped algorithm of Spendley et al.,
+\item the fixed shape algorithm of Spendley et al.,
 \item the variable shape algorithm of Nelder and Mead,
 \item Box's 'complex' algorithm managing bounds and nonlinear inequality
 constraints based on arbitrary number of vertices in the simplex.
@@ -121,8 +121,8 @@ function value at initial point, function value at optimal point, etc...
 \Tabular{ll}{
 Package: & neldermead\\{}
 Type: & Package\\{}
-Version: & 1.0\\{}
-Date: & 2010-05-01\\{}
+Version: & 1.0-2\\{}
+Date: & 2010-05-11\\{}
 License: & CeCILL-2\\{}
 LazyLoad: & yes
 }
