--- a/inst/doc/fminsearch.outputfun.tex
+++ b/inst/doc/fminsearch.outputfun.tex
@@ -32,7 +32,7 @@ attribute set to 'T\_NMDATA' and  with the following elements:\begin{description
 \end{description}
 
 
-\item[\code{fmsdata}] This is a list with a 'type' attribute set to 'T\_FMINSEARCH'
+\item[\code{fmsdata}] This is a list with a 'type' attribute set to 'T\_FARGS'
 which contains specific data of the \code{fminsearch} algorithm: \begin{description}
 
 \item[Display] what to display
