--- a/Changelog
+++ b/Changelog
@@ -1,3 +1,10 @@
+2010/09/10 Sebastien Bihorel <sb.pmlab@gmail.com>
+  
+  * neldermead.configure: fix the check of -coords0 key to real type instead of
+    of string type
+  * fminsearch: modified type argument of fmsdata and fmsfundata to T_FARGS
+  * added fmin.gridsearch function 
+  
 2010/05/25 Sebastien Bihorel <sb.pmlab@gmail.com>
 
   * neldermead.startup: at line 92, substituted "this <- tmp$this" by 
