--- a/inst/doc/fminsearch.function.tex
+++ b/inst/doc/fminsearch.function.tex
@@ -3,7 +3,7 @@
 \keyword{method}{fminsearch.function}
 %
 \begin{Description}\relax
-This function calls the cost function and make it match neldermead
+This function calls the cost function and makes it match neldermead
 requirements. It is used in the \code{fminsearch} function as the
 \code{function} element of the neldermead object (see \code{?neldermead.new}
 and \code{?neldermead.configure}). 
@@ -20,7 +20,7 @@ and \code{?neldermead.configure}).
 \item[\code{x}] A single column vector of parameter estimates.
 \item[\code{index}] An integer variable set to 2, indicating that only the cost
 function is to be computed by the algorithm.
-\item[\code{fmsfundata}] A list with a type attribute set to 'T\_FMINSEARCH' and
+\item[\code{fmsfundata}] A list with a type attribute set to 'T\_FARGS' and
 with (at least) a \code{fun} element, which contain the user-defined cost
 function.
 \end{ldescription}
