--- a/inst/doc/fminsearch.tex
+++ b/inst/doc/fminsearch.tex
@@ -23,7 +23,7 @@ solution based on direct search algorithms should consider using the
 %
 \begin{Arguments}
 \begin{ldescription}
-\item[\code{fun}] A cost function.
+\item[\code{fun}] A cost function return a numeric scalar.
 \item[\code{x0}] A numerical vector of initial guesses (length n).
 \item[\code{options}] A list of optimization options, which drives the behaviour of
 \code{fminsearch}. These options must be set with the \code{optimset}
