--- a/inst/doc/neldermead.bib
+++ b/inst/doc/neldermead.bib
@@ -110,10 +110,10 @@
 }
 
 @InBook{ Michalewicz.2004,
- author = {Z. Michalewicz and D.B. Fogel},
- chapter = {Constraint-handling techniques},
- title = {How to solve it: modern heuristics},
- pages = {231--270},
- year = 2004,
- editor = {Springer}
+ author = {{Z. Michalewicz and D.B. Fogel}},
+ chapter = {{Constraint-handling techniques}},
+ title = {{How to solve it: modern heuristics}},
+ pages = {{231--270}},
+ year = {{2004}},
+ publisher = {{Springer}}
 }
