--- a/inst/doc/fminsearch.tex
+++ b/inst/doc/fminsearch.tex
@@ -1,6 +1,5 @@
 \inputencoding{utf8}
-\HeaderA{fminsearch}{Computation of the unconstrained minimimum of given function with the
- Nelder-Mead algorithm.}{fminsearch}
+\HeaderA{fminsearch}{Computation of the unconstrained minimimum of given function with the Nelder-Mead algorithm.}{fminsearch}
 \keyword{method}{fminsearch}
 %
 \begin{Description}\relax
