--- a/Changelog
+++ b/Changelog
@@ -1,3 +1,7 @@
+2011/03/30 Sebastien Bihorel <sb.pmlab@gmail.com>
+
+  * Corrected encoding of vignette source (latin1 instead of utf8x)
+  
 2011/01/08 Sebastien Bihorel <sb.pmlab@gmail.com>
   
   * fmin.gridsearch: corrected documentation about alpha. Must contain values 
